Updated all operations

--- a/about.html
+++ b/about.html
@@ -21,7 +21,9 @@
     <!-- About Section -->
     <section class="about">
         <h2>About GF(2^m)</h2>
-        <p>GF(2^m) is a finite field used in cryptography, coding theory, and other mathematical applications. This tool simplifies working with these fields by providing arithmetic operations on polynomials.</p>
+        <p>This project is a comprehensive tool for performing arithmetic on polynomials in Galois Fields (GF) with higher degrees, specifically GF(2^m) where m = 163. It supports essential mathematical operations such as modulo reduction, finding inverses, addition, subtraction, multiplication, and division. The implementation is designed to be modular and extensible, allowing seamless adaptation to other standard degrees, such as 163, 233, 239, 283, 409, and 571.
+
+            Users can input polynomials in either binary or hexadecimal formats, and the results are displayed in the same formats, ensuring accessibility and ease of use for different mathematical representations. The project combines advanced computational methods with user-friendly design, making it a valuable tool for students, researchers, and professionals working in fields such as cryptography, coding theory, and error correction.</p>
         <img src="images/about.jpg" alt="About GF(2^m)">
     </section>
 
