Removed polynomial 2 for inverse operation

--- a/operations.html
+++ b/operations.html
@@ -38,8 +38,12 @@
             <label for="poly1">Polynomial 1:</label>
             <input type="text" id="poly1" placeholder="Enter Polynomial 1">
 
-            <label for="poly2">Polynomial 2 (Optional):</label>
+            <!-- <label for="poly2">Polynomial 2 (Optional):</label>
+            <input type="text" id="poly2" placeholder="Enter Polynomial 2"> -->
+
+            <label for="poly2" id="poly2-label">Polynomial 2:</label>
             <input type="text" id="poly2" placeholder="Enter Polynomial 2">
+
         </div>
 
         <div class="input type">
